--- a/CursosAlura.html
+++ b/CursosAlura.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos da Alura</title>
 </head>
+
 <body>
     <ul>
         <li>Vogrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integração Contínua</li>
+        <li>Array Girls</li>        
     </ul>
 </body>
 </html>
